force-app/main/default/objects/Apttus_Config2__CostItem__c/Apttus_Config2__CostItem__c.object-meta.xml
<CustomObject>
    <description>Represents a product entry in a Cost Model.</description>
    <label>Cost Item</label>
    <nameField>
        <displayFormat>CI-{0000000000}</displayFormat>
        <label>Cost Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>