force-app/main/default/objects/Apttus_Config2__CostItem__c/fields/Apttus_Config2__CostModelId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CostModelId__c</fullName>
    <description>Id of the Cost Model associated with the Product&apos;s price list</description>
    <inlineHelpText>Id of the Cost Model associated with the Product&apos;s price list</inlineHelpText>
    <label>Cost Model</label>
    <referenceTo>Apttus_Config2__CostModel__c</referenceTo>
    <relationshipLabel>Cost Items</relationshipLabel>
    <relationshipName>CostItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>