force-app/main/default/objects/Apttus_Config2__CostItem__c/fields/Apttus_Config2__CostTypeId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CostTypeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id of the Cost Type associated with this Cost Item</description>
    <inlineHelpText>Id of the Cost Type associated with this Cost Item</inlineHelpText>
    <label>Cost Type</label>
    <referenceTo>Apttus_Config2__CostType__c</referenceTo>
    <relationshipLabel>Cost Items</relationshipLabel>
    <relationshipName>Cost_Items</relationshipName>
    <type>Lookup</type>
</CustomField>