force-app/main/default/objects/Apttus_Config2__CostItem__c/fields/Apttus_Config2__PriceListItemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PriceListItemId__c</fullName>
    <description>Id of the Price List Item for corresponding charge type</description>
    <inlineHelpText>Id of the Price List Item for corresponding charge type</inlineHelpText>
    <label>Price List Item</label>
    <referenceTo>Apttus_Config2__PriceListItem__c</referenceTo>
    <relationshipLabel>Cost Items</relationshipLabel>
    <relationshipName>PriceListItems</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>