force-app/main/default/objects/Apttus_Config2__CostItem__c/fields/Apttus_Config2__ProductId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the product associated</description>
    <inlineHelpText>ID of the product associated</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Cost Items</relationshipLabel>
    <relationshipName>CostItems</relationshipName>
    <type>Lookup</type>
</CustomField>